Testing hamburger issue on iPhone 8plus

--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ ul.navigation li:last-child {
     display: none;
     flex-direction: column;
     width: 100%;
+    background-color: red;
   }
 
   .nav-item {
